[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/tools/board_generator.gd" id="1_script"]

[node name="BoardGenerator" type="Node2D"]
script = ExtResource("1_script")

[node name="CaptureViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1200, 1120)

[node name="BoardRoot" type="Node2D" parent="CaptureViewport"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GenerateButton" type="Button" parent="UI"]
offset_left = 860.0
offset_top = 500.0
offset_right = 1060.0
offset_bottom = 550.0
text = "Generate Boards"

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 810.0
offset_top = 560.0
offset_right = 1110.0
offset_bottom = 590.0
horizontal_alignment = 1
text = "Click to generate boards"
